resize pane with mouse

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,6 +31,7 @@ set -g history-limit 10000
 
 # Mouse support
 set -g mouse on
+set -g mouse-resize-pane on
 
 # Copy
 bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"
